updated tab name, fixed homepage link spacing

--- a/frontend-user-view/src/App.css
+++ b/frontend-user-view/src/App.css
@@ -96,10 +96,14 @@
 
 /*Homepage*/
 #homepage-container {
-  /* width: 80%; */
+  
 }
 
 /*HomepageLink*/
+#homepage-link-container {
+  margin-top: 2rem;
+}
+
 #homepage-link {
   color: #474044;
   text-decoration: none;
